--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,8 @@
 }
 body{
    display: flex;
-   justify-content: center;
+   flex-direction: column;
+   align-items: center;
  }
  .item-container{
    display: grid;
@@ -18,9 +19,11 @@ body{
  img{
    display: block;
    margin: auto;
-   width: 15rem;
-   height: 10rem;
+   max-height: 10rem;
  }
+ h1{
+  margin-bottom: 6rem;
+}
  h5{
    text-align: center;
    margin: .5rem;
