--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,69 +1,80 @@
 * {
-   box-sizing: border-box;
+  box-sizing: border-box;
 }
- :root {
-   background-color: #202020;
-   color: aquamarine;
-   font-family: monospace;
+
+:root {
+  background-color: #202020;
+  color: aquamarine;
+  font-family: monospace;
   word-spacing: -.2rem;
   font-size: 140%;
 
-   margin: 0;
+  margin: 0;
 }
-body{
-   height: 100vh;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
- }
- img{
-   display: block;
-   margin: auto;
-   height: 30rem;
-   width: 50rem;
- }
- 
- h2{
-   display: inline;
-   text-align: center;
-   margin: .5rem;
- }
- h3{
-   display: inline;
-   margin: .5rem;
- }
- .description{
-   display: inline-block;
-   position: absolute;
-   line-height: 95%;
-   width: 35rem;
-   right: 1rem;
-   top: 31.3rem;
- }
- .relative{
-   position: relative;
- }
- .item-container{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   margin-top: 6rem;
- }
- .item {
-   border: aquamarine 1px solid;
-   border-radius: 8px;
-   padding: .5rem;
-   margin-bottom: 1rem;
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+  height: 30rem;
+  width: 50rem;
+}
+
+h2 {
+  display: inline;
+  text-align: center;
+  margin: .5rem;
+}
+
+h3 {
+  display: inline;
+  margin: .5rem;
+}
+
+.description {
+  display: inline-block;
+  position: absolute;
+  line-height: 95%;
+  width: 35rem;
+  right: 1rem;
+  top: 31.3rem;
+}
+
+.relative {
+  position: relative;
+}
+
+.item-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 6rem;
+}
+
+.item {
+  border: aquamarine 1px solid;
+  border-radius: 8px;
+  padding: .5rem;
+  margin-bottom: 1rem;
+}
+
+.delete-button,
+.buy-button {
+  margin-left: .5rem;
+  margin-top: .3rem;
+  background: aquamarine;
+  border-color: rgb(8, 8, 8);
+  border-radius: 5px;
+}
+
+@media (pointer: coarse) {
+  .item {
+    border: aquamarine 3px solid;
   }
-  .delete-button {
-      margin-top: 3rem;
-  }
-  .buy-button {
-      margin-left: .5rem;
-      margin-top: .3rem;
-  }
-  @media (pointer: coarse) {
-    .item {
-      border: aquamarine 3px solid;
-    }
-  }
+}
