--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -31,6 +31,12 @@ h1 {
    margin: .5rem;
 }
 
-a {
-   margin: 1rem 0 2rem 0;
-}
+.btn {
+   margin: .5rem 0 2rem 0;
+   background: aqua;
+   border-color: rgb(8, 8, 8);
+   border-radius: 5px;
+ }
+ .btn:hover {
+   background: whitesmoke;
+ }
