--- a/public/css/show.css
+++ b/public/css/show.css
@@ -7,7 +7,7 @@
   color: aquamarine;
   font-family: monospace;
   word-spacing: -.2rem;
-  font-size: 140%;
+  font-size: 135%;
 
   margin: 0;
 }
@@ -64,13 +64,15 @@ h3 {
   margin-bottom: 1rem;
 }
 
-.delete-button,
-.buy-button {
+.btn {
   margin-left: .5rem;
   margin-top: .3rem;
   background: aquamarine;
   border-color: rgb(8, 8, 8);
   border-radius: 5px;
+}
+.btn:hover {
+  background: whitesmoke;
 }
 
 @media (pointer: coarse) {
