--- a/public/css/show.css
+++ b/public/css/show.css
@@ -8,7 +8,6 @@
   font-family: monospace;
   word-spacing: -.2rem;
   font-size: 135%;
-
   margin: 0;
 }
 
@@ -21,18 +20,20 @@ body {
 
 img {
   display: block;
-  margin: auto;
   height: 30rem;
   width: 50rem;
 }
-
+h1 {
+  margin-bottom: .5rem;
+}
 h2 {
   display: inline;
   text-align: center;
   margin: .5rem;
 }
 
-h3 {
+p {
+  font-weight: bolder;
   display: inline;
   margin: .5rem;
 }
@@ -41,32 +42,28 @@ h3 {
   display: inline-block;
   position: absolute;
   line-height: 95%;
-  width: 35rem;
-  right: 1rem;
-  top: 31.3rem;
+  font-weight: 100;
+  font-size: .9rem;
+  width: 39rem;
+  right: .1rem;
+  top: 32rem;
 }
 
 .relative {
   position: relative;
 }
 
-.item-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 6rem;
-}
-
 .item {
   border: aquamarine 1px solid;
   border-radius: 8px;
+  margin-top: 4rem;
   padding: .5rem;
-  margin-bottom: 1rem;
+  padding-bottom: 0;
+  min-height: 70%;
 }
 
 .btn {
-  margin-left: .5rem;
-  margin-top: .3rem;
+  margin-top: .8rem;
   background: aquamarine;
   border-color: rgb(8, 8, 8);
   border-radius: 5px;
@@ -74,9 +71,28 @@ h3 {
 .btn:hover {
   background: whitesmoke;
 }
+.buy-button {
+  position: absolute;
+  margin: 0;
+  margin-left: .5rem;
+  font-size: 120%;
+}
+.buy-button:hover {
+  background: rgb(121, 17, 17);
+}
+form{
+  display: inline;
+}
 
 @media (pointer: coarse) {
   .item {
     border: aquamarine 3px solid;
+    min-height: 30%;
+  }
+}
+@media (pointer: coarse) and (orientation: landscape) {
+  .item {
+    border: aquamarine 3px solid;
+    min-height: 150%;
   }
 }
